gen/ShowProposalParser.java
// Generated from C:/Users/berna/IdeaProjects/sem4pi-2024-2025-sem4pi_2024_2025_g39/LPROG/ShowProposal.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ShowProposalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATE_SEPARATOR=1, PAGE_BREAK=2, SEPARATOR_LINE=3, DOTS=4, NUMBER=5, TEXT=6, 
		NEWLINE=7, WS=8;
	public static final int
		RULE_document = 0, RULE_header = 1, RULE_body = 2, RULE_closing = 3, RULE_attachments = 4, 
		RULE_recipient_block = 5, RULE_recipient_name = 6, RULE_company_name = 7, 
		RULE_address_block = 8, RULE_vat_number = 9, RULE_reference_number_date = 10, 
		RULE_additional_recipient_info = 11, RULE_salutation = 12, RULE_proposal_title = 13, 
		RULE_paragraph = 14, RULE_location = 15, RULE_date = 16, RULE_time = 17, 
		RULE_duration = 18, RULE_list_drones = 19, RULE_list_figures = 20, RULE_list_drone_items = 21, 
		RULE_list_figure_items = 22, RULE_title = 23, RULE_page_break = 24, RULE_attachment_section = 25, 
		RULE_attachment_title = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "header", "body", "closing", "attachments", "recipient_block", 
			"recipient_name", "company_name", "address_block", "vat_number", "reference_number_date", 
			"additional_recipient_info", "salutation", "proposal_title", "paragraph", 
			"location", "date", "time", "duration", "list_drones", "list_figures", 
			"list_drone_items", "list_figure_items", "title", "page_break", "attachment_section", 
			"attachment_title"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'[page break]'", null, "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DATE_SEPARATOR", "PAGE_BREAK", "SEPARATOR_LINE", "DOTS", "NUMBER", 
			"TEXT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShowProposal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShowProposalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public AttachmentsContext attachments() {
			return getRuleContext(AttachmentsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ShowProposalParser.EOF, 0); }
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			header();
			setState(55);
			body();
			setState(56);
			attachments();
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public SalutationContext salutation() {
			return getRuleContext(SalutationContext.class,0);
		}
		public Recipient_blockContext recipient_block() {
			return getRuleContext(Recipient_blockContext.class,0);
		}
		public Reference_number_dateContext reference_number_date() {
			return getRuleContext(Reference_number_dateContext.class,0);
		}
		public Proposal_titleContext proposal_title() {
			return getRuleContext(Proposal_titleContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			salutation();
			setState(60);
			recipient_block();
			setState(61);
			reference_number_date();
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(62);
				proposal_title();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public ClosingContext closing() {
			return getRuleContext(ClosingContext.class,0);
		}
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(65);
					paragraph();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(68); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(70);
			closing();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClosingContext extends ParserRuleContext {
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public ClosingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterClosing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitClosing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitClosing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClosingContext closing() throws RecognitionException {
		ClosingContext _localctx = new ClosingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_closing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			paragraph();
			setState(73);
			paragraph();
			setState(74);
			paragraph();
			setState(75);
			paragraph();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttachmentsContext extends ParserRuleContext {
		public Page_breakContext page_break() {
			return getRuleContext(Page_breakContext.class,0);
		}
		public Attachment_sectionContext attachment_section() {
			return getRuleContext(Attachment_sectionContext.class,0);
		}
		public AttachmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attachments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterAttachments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitAttachments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitAttachments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttachmentsContext attachments() throws RecognitionException {
		AttachmentsContext _localctx = new AttachmentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attachments);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			page_break();
			setState(78);
			attachment_section();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Recipient_blockContext extends ParserRuleContext {
		public Company_nameContext company_name() {
			return getRuleContext(Company_nameContext.class,0);
		}
		public Address_blockContext address_block() {
			return getRuleContext(Address_blockContext.class,0);
		}
		public Vat_numberContext vat_number() {
			return getRuleContext(Vat_numberContext.class,0);
		}
		public Recipient_nameContext recipient_name() {
			return getRuleContext(Recipient_nameContext.class,0);
		}
		public Additional_recipient_infoContext additional_recipient_info() {
			return getRuleContext(Additional_recipient_infoContext.class,0);
		}
		public Recipient_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipient_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterRecipient_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitRecipient_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitRecipient_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Recipient_blockContext recipient_block() throws RecognitionException {
		Recipient_blockContext _localctx = new Recipient_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_recipient_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(80);
				recipient_name();
				}
				break;
			}
			setState(83);
			company_name();
			setState(84);
			address_block();
			setState(85);
			vat_number();
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(86);
				additional_recipient_info();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Recipient_nameContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ShowProposalParser.NEWLINE, 0); }
		public Recipient_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipient_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterRecipient_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitRecipient_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitRecipient_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Recipient_nameContext recipient_name() throws RecognitionException {
		Recipient_nameContext _localctx = new Recipient_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recipient_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(TEXT);
			setState(90);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Company_nameContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ShowProposalParser.NEWLINE, 0); }
		public Company_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_company_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterCompany_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitCompany_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitCompany_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Company_nameContext company_name() throws RecognitionException {
		Company_nameContext _localctx = new Company_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_company_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(TEXT);
			setState(93);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Address_blockContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ShowProposalParser.NEWLINE, 0); }
		public Address_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_address_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterAddress_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitAddress_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitAddress_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Address_blockContext address_block() throws RecognitionException {
		Address_blockContext _localctx = new Address_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_address_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(TEXT);
			setState(96);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Vat_numberContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalParser.NEWLINE, i);
		}
		public Vat_numberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vat_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterVat_number(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitVat_number(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitVat_number(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Vat_numberContext vat_number() throws RecognitionException {
		Vat_numberContext _localctx = new Vat_numberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vat_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(TEXT);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				match(NEWLINE);
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Reference_number_dateContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ShowProposalParser.NEWLINE, 0); }
		public Reference_number_dateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reference_number_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterReference_number_date(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitReference_number_date(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitReference_number_date(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reference_number_dateContext reference_number_date() throws RecognitionException {
		Reference_number_dateContext _localctx = new Reference_number_dateContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_reference_number_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TEXT);
			setState(105);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Additional_recipient_infoContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ShowProposalParser.NEWLINE, 0); }
		public Additional_recipient_infoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additional_recipient_info; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterAdditional_recipient_info(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitAdditional_recipient_info(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitAdditional_recipient_info(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Additional_recipient_infoContext additional_recipient_info() throws RecognitionException {
		Additional_recipient_infoContext _localctx = new Additional_recipient_infoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_additional_recipient_info);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(TEXT);
			setState(108);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SalutationContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ShowProposalParser.NEWLINE, 0); }
		public SalutationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_salutation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterSalutation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitSalutation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitSalutation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SalutationContext salutation() throws RecognitionException {
		SalutationContext _localctx = new SalutationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_salutation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(TEXT);
			setState(111);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Proposal_titleContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalParser.NEWLINE, i);
		}
		public Proposal_titleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposal_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterProposal_title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitProposal_title(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitProposal_title(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Proposal_titleContext proposal_title() throws RecognitionException {
		Proposal_titleContext _localctx = new Proposal_titleContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_proposal_title);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(TEXT);
			setState(114);
			match(NEWLINE);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(115);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParagraphContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ShowProposalParser.TEXT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalParser.NEWLINE, i);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).enterParagraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalListener ) ((ShowProposalListener)listener).exitParagraph(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalVisitor ) return ((ShowProposalVisitor<? extends T>)visitor).visitParagraph(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParagraphContext paragraph() throws RecognitionException {
		ParagraphContext _localctx = new ParagraphContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_paragraph);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(TEXT);
			setState(119);
			match(NEWLINE);
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(120);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
